<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.jackett.viewModel.WelcomeViewModel" />
    </data>

    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.WelcomeFragment">

        <TextView
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_role"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <RadioGroup
            android:id="@+id/radio"
            android:layout_marginStart="100dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:onClick="@{()->data.getRole(radioButton)}"
                android:id="@+id/radioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/teacher" />

            <RadioButton
                android:onClick="@{()->data.getRole(radioButton2)}"
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/student" />
        </RadioGroup>

        <Button
            android:layout_marginTop="10dp"
          android:layout_gravity="center"
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed" />

    </LinearLayout>
</layout>